--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
-<body>
+<body class="bodys">
     <header class="header">
         <nav class="nav">
             <a href="" class="nav-logo"><span class="span-logo">Web</span>Studio</a>
-            <ul>
+            <ul class="list">
                 <li>
                    <a href="./index.html" class="nav-link">Студия</a>
                 </li>
@@ -48,7 +48,7 @@
             </button>
         </section class="content">
         <section>
-           <ul>
+           <ul class="list">
                <li>
                    <h3 class="content-title">
                         Внимание к деталям
@@ -88,6 +88,7 @@
             <h2 class="action-title">
                 Чем мы занимаемся
             </h2>
+            <ul class="list">
                 <li>
                     <img src="./images/desk-office.png.jpg" alt="programer working in his desk office" width="370" height="294">
                 </li>
@@ -103,7 +104,7 @@
                 <h2 class="group-title">
                     Наша команда
                 </h2>
-
+            <ul class="list">
                 <li>
                     <img src="./images/Igor-Demianenko.jpg" alt="photo of Igor Demianenko" width="270" height="260">
                         <h3 class="group-name">
@@ -149,7 +150,7 @@
     <Footer class="footer">
         <a href="" class="footer-logo"><span class="span-flogo">Web</span>Studio</a>
         <address class="footer-adr">
-        <ul>
+        <ul class="list">
             <li class="footer-office">   
                 г. Киев, пр-т Леси Украинки, 26
             </li>
