исправления в html ,css

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
         rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
-<body class="bodys">
+<body>
     <header class="header">
         <nav class="nav">
             <a href="" class="nav-logo"><span class="span-logo">Web</span>Studio</a>
             <ul class="list">
                 <li>
-                   <a href="./index.html" class="nav-link">Студия</a>
+                   <a href="./index.html" class="nav-link current" >Студия</a>
                 </li>
                 <li>
                    <a href="./portfolio.html" class="nav-link">Портфолио</a>
@@ -27,7 +27,7 @@
                 </li>
             </ul>
         </nav>
-            <ul class="adr">
+            <ul>
                 <li>
                   <a href="mailto:info@devstudio.com" class="adr-link">info@devstudio.com</a>
                 </li>
@@ -48,7 +48,7 @@
             </button>
         </section class="content">
         <section>
-           <ul class="list">
+           <ul>
                <li>
                    <h3 class="content-title">
                         Внимание к деталям
@@ -88,7 +88,7 @@
             <h2 class="action-title">
                 Чем мы занимаемся
             </h2>
-            <ul class="list">
+            <ul>
                 <li>
                     <img src="./images/desk-office.png.jpg" alt="programer working in his desk office" width="370" height="294">
                 </li>
@@ -104,7 +104,7 @@
                 <h2 class="group-title">
                     Наша команда
                 </h2>
-            <ul class="list">
+            <ul>
                 <li>
                     <img src="./images/Igor-Demianenko.jpg" alt="photo of Igor Demianenko" width="270" height="260">
                         <h3 class="group-name">
@@ -150,7 +150,7 @@
     <Footer class="footer">
         <a href="" class="footer-logo"><span class="span-flogo">Web</span>Studio</a>
         <address class="footer-adr">
-        <ul class="list">
+        <ul>
             <li class="footer-office">   
                 г. Киев, пр-т Леси Украинки, 26
             </li>
